# Lucent

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-windows.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lucent_llama.cpp
app/src/main/res/drawable/: ic_notification.xml  ic_widget_assistant.xml  ic_widget_check_off.xml  ic_widget_check_on.xml  ic_widget_note.xml  ic_widget_progress.xml  ic_widget_task.xml  preview_assistant.xml  preview_new_note.xml  preview_new_task.xml  preview_pinned.xml  preview_progress.xml  preview_quick.xml  preview_today.xml  widget_background.xml  widget_bg.xml  widget_button_background.xml  widget_card_gradient.xml  widget_cell_bg.xml  widget_glyph_chip.xml  widget_hint_pill.xml  widget_progress_track.xml
app/src/main/res/layout/: widget_assistant.xml  widget_assistant_small.xml  widget_assistant_wide.xml  widget_new_note.xml  widget_new_note_small.xml  widget_new_note_wide.xml  widget_new_task.xml  widget_new_task_small.xml  widget_new_task_wide.xml  widget_pinned_note.xml  widget_quick_actions.xml  widget_task_summary.xml  widget_task_summary_small.xml  widget_task_summary_wide.xml  widget_today_tasks.xml  widget_today_tasks_item.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
desktop/: build.gradle.kts
desktop/native/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: lib.rs
tools/i18n/: catalog.py  gen_i18n.py
(+80 files in other folders)
